# inclusion

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ci  ci.yml
inclusion/: Cargo.toml
inclusion-articles/: Cargo.toml  README.md
inclusion-articles/migrations/2021-08-23-230738_articles_table/: up.sql
inclusion-articles/src/: api.rs  connection.rs  lib.rs  schema.rs
inclusion-dashboard/: Cargo.toml  README.md  index.html  index.sass
inclusion-dashboard/src/: components.rs  lib.rs  main.rs  pages.rs
inclusion-dashboard/src/pages/: articles.rs  organizations.rs
inclusion-service/: Cargo.toml  README.md
inclusion-service/src/: api.rs  config.rs  lib.rs  main.rs
inclusion-service/src/api/: articles.rs  system.rs
inclusion-service/tests/: common.rs  crud.rs  crud_articles.rs
inclusion-ui/: Cargo.toml  build.rs
inclusion-ui/inclusion-ui/: package-lock.json  package.json  tailwind.config.js
inclusion-ui/inclusion-ui/src/: App.tsx
inclusion-ui/src/: lib.rs
