[package]
name = "inclusion-articles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07", "numeric"] }
r2d2 = "0.8"
diesel_migrations = "1.4"
uuid = { version = ">=0.7.0, <0.9.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
testcontainers = "^0.12"
