[package]
name = "dashboard-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "^0.2.78", features = ["serde-serialize"]  }
wasm-bindgen-futures = "^0.4.28"
js-sys = "^0.3.55"
yew-router = { git = "https://github.com/yewstack/yew", branch = "master" }
yew = {git = "https://github.com/yewstack/yew", branch = "master"}
log = "^0.4.14"
wasm-logger = "^0.2.0"

gloo = "^0.2.0"
uuid = "^0.8.2"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"

[dependencies.web-sys]
version = "^0.3.4"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]