[package]
name = "inclusion-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
log = "0.4"
mime = "0.3"
lazy_static = "1.4"
upstream_config = { package = "config", version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
inclusion-articles = { path="../inclusion-articles" }
uuid = { version = ">=0.7.0, <0.9.0" }

[dev-dependencies]
actix-rt = "2.3.0"
testcontainers = "^0.12"
tokio = "1.12.0"
